[metadata]
name = calculator-project
version = 1.0.0
author = Calculator Project Team
author_email = team@calculator-project.com
description = Educational calculator project with CLI and GUI implementations
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/calculator-project
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Education
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Education
    Topic :: Scientific/Engineering :: Mathematics

[options]
packages = find:
python_requires = >=3.8
install_requires =
    numpy>=1.21.0
    scipy>=1.7.0

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    black>=22.0.0
    flake8>=5.0.0
docs =
    sphinx>=5.0.0
    sphinx-rtd-theme>=1.0.0

[options.entry_points]
console_scripts =
    calc-cli = beginner-cli.calculator_beginner:main
    calc-gui = advanced-gui.calculator_advanced:main

# Black configuration
[tool:black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# Flake8 configuration
[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude = .git,__pycache__,build,dist,.eggs

# Pytest configuration  
[tool:pytest]
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
addopts = 
    --verbose
    --tb=short
    --cov=beginner-cli
    --cov=advanced-gui
    --cov-report=term-missing
    --cov-report=html
